# rust-cdk-serverless

./: .env.sample  .eslintrc.cjs  .eslintrc.js  .gitignore  .prettierignore  README.md  bun.lockb  cdk.json  global.d.ts  package.json  pnpm-lock.yaml  rust-toolchain.toml  tsconfig.json  vite.config-integration.ts  vitest.config.ts  vitestIntegrationSetup.ts
.cargo/: config.toml
.github/workflows/: pr-cleanup.yml  pr.yml  push-main.yml
iac/: index.ts  shared.ts  stack.ts  test-stack.ts
iac-v2/: index.ts  stack.ts
integration-tests/: get-signed-request.ts  todos.integration.test.ts
integrationTests/: todos.integration.test.ts
rust-lambdas/: Cargo.toml
rust-lambdas/create-todo/: Cargo.toml
rust-lambdas/create-todo/src/: handler.rs  main.rs
rust-lambdas/delete-todo/: Cargo.toml
rust-lambdas/delete-todo/src/: handler.rs  main.rs
rust-lambdas/list-todos/: Cargo.toml
rust-lambdas/list-todos/src/: handler.rs  main.rs
rust-lambdas/on-todo-created/: Cargo.toml
rust-lambdas/on-todo-created/src/: handler.rs  main.rs
rust-lambdas/on-todo-deleted/: Cargo.toml
rust-lambdas/on-todo-deleted/src/: handler.rs  main.rs
rust-lambdas/shared/: Cargo.toml
rust-lambdas/shared/src/: clients.rs  errors.rs  lib.rs  logging.rs  models.rs
rust_lambdas/: Cargo.toml
rust_lambdas/create-todo/: Cargo.toml
rust_lambdas/create-todo/src/: handler.rs  main.rs
rust_lambdas/delete-todo/: Cargo.toml
rust_lambdas/list-todos/: Cargo.toml
rust_lambdas/list-todos/src/: handler.rs  main.rs
rust_lambdas/shared/: Cargo.toml
rust_lambdas/shared/src/: dynamodb.rs  errors.rs  lib.rs
test/: stack.test.ts
