[workspace]
members = [
    "shared",
    "create-todo",
    "delete-todo",
    "list-todos",
    "on-todo-created",
]

resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["fargito"]
description = "A sample Rust Serverless app"

[workspace.dependencies]
aws_lambda_events = "0.15.0"
aws-config = "1.2.1"
aws-sdk-dynamodb = "1.23.0"
aws-sdk-eventbridge = "1.21.0"
lambda_http = { version = "0.11.1", default-features = false, features = ["apigw_http", "tracing"] }
lambda_runtime = "0.11.1"
serde = "^1.0.198"
serde_json = "^1.0.116"
tokio = { version = "1.37.0", features = ["macros"] }
