[workspace]
members = [
    "shared",
    "create-todo",
    "list-todos",
]

resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["fargito"]
description = "A sample Rust Serverless app"

[workspace.dependencies]
aws-config = "0.56.1"
lambda_runtime = "0.8.2"
serde = "^1"
serde_json = "^1"
tokio = { version = "1.33.0", features = ["macros"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }