[workspace]
members = [
    "shared",
    "create-todo",
    "list-todos",
]

resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["fargito"]
description = "A sample Rust Serverless app"

[workspace.dependencies]
aws_lambda_events = "0.11.1"
aws-config = "0.101.0"
aws-sdk-dynamodb = "0.33.0"
lambda_http = "0.8.3"
lambda_runtime = "0.8.3"
serde = "^1.0.192"
serde_json = "^1.0.108"
tokio = { version = "1.34.0", features = ["macros"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }