[workspace]
members = [
    "shared",
    "create-todo",
    "list-todos",
]

resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["fargito"]
description = "A sample Rust Serverless app"

[workspace.dependencies]
aws_lambda_events = "0.12.1"
aws-config = "1.1.9"
aws-sdk-dynamodb = "1.20.0"
lambda_http = "0.8.3"
lambda_runtime = "0.8.3"
serde = "^1.0.197"
serde_json = "^1.0.115"
tokio = { version = "1.37.0", features = ["macros"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }