[package]
name = "create-todo"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }

aws_lambda_events = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-sdk-eventbridge = { workspace = true }
aws-smithy-mocks-experimental = { workspace = true }
lambda_http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
ulid = "1.1.2"
