[package]
name = "on-todo-deleted"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }

aws-sdk-dynamodb = { workspace = true }
aws_lambda_events = { workspace = true }
lambda_runtime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
