[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws_lambda_events = { workspace = true }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
serde = { workspace = true }
thiserror = "1.0.59"
tokio = { workspace = true }
tracing = "0.1.40"
ts-rs = "8.1.0"
