[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws_lambda_events = { workspace = true }
aws-config = { workspace = true }
aws-runtime = "1.5.6"
aws-sdk-dynamodb = { workspace = true }
aws-sdk-eventbridge = { workspace = true }
serde = { workspace = true }
thiserror = "2.0.7"
tokio = { workspace = true }
tracing = { workspace = true }
ts-rs = "11.0.0"
