[package]
name = "create_todo"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }

aws-config = { workspace = true }
aws_lambda_events = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
lambda_http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ulid = "1.1.0"
