[package]
name = "list_todos"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }

aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
lambda_http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "1.0.51"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
